--- a/microservice-kafka/microservice-kafka-invoicing/src/main/resources/application.properties
+++ b/microservice-kafka/microservice-kafka-invoicing/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.datasource.username=dbuser
 spring.datasource.password=dbpass
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
+#Master
